# systemintegration

./: .gitignore  README.md  package-lock.json  package.json  user.csv  user.json  user.xml  user.yaml
01a.03a.FileFormatsBonanza/dart/dart-read-files/: pubspec.yaml
01a.03a.FileFormatsBonanza/typescript/: express.ts
01a.FileFormatsBonanza/dart/dart-read-files/: pubspec.yaml
01a.FileFormatsBonanza/typescript/: client.ts  express.ts  read-files.ts  time-trackings.ts  user.ts
04a.SSE/SSE/: app.js  package-lock.json  package.json
04a.SSE/SSE.Client/: app.js  package.json
04b.granularaccess/: postgresql.txt
05a.webhook/ClientApp/: package.json  vite.config.ts
05a.webhook/WebMVCApp/: Program.cs  appsettings.Development.json
06a.WebSockets/: package-lock.json  package.json  server.js
06a.WebSockets/public/: index.html
08._Server-To-Server/node-server/: app.js  package.json
08._Server-To-Server/python-server/: main.py  pyproject.toml
08_webhook_Server-To-Server/python-server/: main.py
08a_database-documentation/: dbdocs.txt
08b_database-migration/: clientUser.csv  clients.csv  mssql-script.sql  pssql-data-script.sql  pssql-script.sql  timetrackings.csv  users.csv  webhookRegistrations.csv
08c_auth-integration/auth-integration/: GUIDE.md  README.md  constants.ts  package-lock.json  package.json
0_python/: main.py  pyproject.toml
10a_graphql/: index.js  package-lock.json  package.json
timertrackerWebhook/: WebMVCApp.sln
timertrackerWebhook/ClientApp/: index.html  package-lock.json
timertrackerWebhook/WebMVCApp/: WebMVCApp.csproj
(+127 files in other folders)
