[tool.poetry]
name = "python-server"
version = "0.1.0"
description = ""
authors = ["Peter Melander <petermelander2910@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
